Fixing spacing on reference cards

--- a/src/style/card.css
+++ b/src/style/card.css
@@ -61,7 +61,7 @@ div.card-wrapper {
 }
 
 .profile p {
-  	padding: 4px 0 10px 10px;
+  	padding: 4px 10px 10px 10px;
   	margin: 0;
 
 }
